--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EjercicioSofkaJair
 excludes=
+file.reference.sqljdbc_9.4.1.0_enu.zip=C:\\Users\\tania\\Downloads\\sqljdbc_9.4.1.0_enu.zip
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqljdbc_9.4.1.0_enu.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
