Agrego todos los comandos de conexion y dejo esta version como mejor avance.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EjercicioSofkaJair.jar
+dist.jar=${dist.dir}/EjercicioSofkaJ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/EjercicioSofkaJair
+dist.jlink.output=${dist.jlink.dir}/EjercicioSofkaJ
 excludes=
 file.reference.sqljdbc_9.4.1.0_enu.zip=C:\\Users\\tania\\Downloads\\sqljdbc_9.4.1.0_enu.zip
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=EjercicioSofkaJair
+jlink.launcher.name=EjercicioSofkaJ
 main.class=Vista.Inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
